--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-medium-editor",
+  "name": "angular-dante",
   "version": "0.1.0",
   "dependencies": {
     "angular": "1.3.*",
-    "medium-editor": "4.4.*"
+    "dante": "~0.0.12"
   },
-  "main": "./dist/angular-medium-editor.js"
+  "main": "./dist/angular-dante.js"
 }
